# loco_utils

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: cd-manylinux-pypi.yml  ci-cmake.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  deploy-pypi.yml
cmake/: Common.cmake  Dependencies.cmake  FindSphinx.cmake  LocoUtilsDependencies.cmake  Utils.cmake  UtilsDependencies.cmake
docs/: .gitignore  Doxyfile.in  api_reference.rst  index.rst  overview.rst
examples/: .clang-tidy  CMakeLists.txt  example_logger_console.cpp  example_logger_file.cpp  example_obj_loader.cpp  example_path_handling.cpp  example_perlin_noise.cpp  example_profiler_external_chrome.cpp  example_raii_helper_macros.cpp  example_smart_pointers_macro.cpp  example_timing.cpp  logger_console.cpp  logger_file.cpp  path_usage.cpp
ext/: .gitignore  CMakeLists.txt
include/loco/utils/: all.hpp  common.hpp  logging.hpp  path_handling.hpp  perlin_noise.hpp  profiling.hpp  timing.hpp
include/tinyutils/: common.hpp  logging.hpp  path_handling.hpp  perlin_noise.hpp  profiling.hpp  timing.hpp  tinyutils.hpp
include/utils/: all.hpp  common.hpp  logging.hpp  obj_loader.hpp  path_handling.hpp  perlin_noise.hpp  profiling.hpp  timing.hpp
python/loco/utils/bindings/: CMakeLists.txt
python/loco/utils/bindings/src/: bindings_py.cpp  logging_py.cpp  path_handling_py.cpp  perlin_noise_py.cpp  profiling_py.cpp  timing_py.cpp
python/tinyutils/bindings/: CMakeLists.txt
python/tinyutils/bindings/src/: bindings_py.cpp  logging_py.cpp  path_handling_py.cpp  perlin_noise_py.cpp  profiling_py.cpp  timing_py.cpp
python/utils/: __init__.py
python/utils/bindings/: CMakeLists.txt  bindings_py.cpp  logging_py.cpp  path_handling_py.cpp  perlin_noise_py.cpp
python/utils/bindings/src/: logging_py.cpp  perlin_noise_py.cpp  profiling_py.cpp  timing_py.cpp
scripts/: run_examples.bat  setup_dependencies.sh
src/loco/utils/: common.cpp  logging.cpp  path_handling.cpp  perlin_noise.cpp  profiling.cpp  timing.cpp
src/tinyutils/: common.cpp  logging.cpp  path_handling.cpp  perlin_noise.cpp  profiling.cpp  timing.cpp
src/utils/: common.cpp  logging.cpp  obj_loader.cpp  path_handling.cpp  perlin_noise.cpp  profiling.cpp  timing.cpp
tests/cpp/: CMakeLists.txt  test_logging.cpp
tests/python/: logging_test.py
