[metadata]
name = utils
version = 0.2.1
description = A small C/C++ helper library
long_description = file: README.md
long_description_content_type = text/markdown
author = Wilbert Santos Pumacay Huallpa
license = MIT License
author_email = wpumacay@gmail.com
url = https://github.com/wpumacay/tiny_utils
keywords = C C++ Utils
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
zip_safe = False
python_requires = >=3.8

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    venv

max-line-length = 80
